# MyCustomUIWidget

./: .gitattributes  .gitignore  BuildVSProject.bat  BuildVSProject_Debug.bat  BuildVSProject_Release.bat  CMakeLists.txt  README.en.md  README.md
CommonDefine/: ColorDefine.xlsx  UIWidgetColorDefine.h  UIWidgetGlobal.h
DesignerPlugin/: CMakeLists.txt  CustomComboBoxPlugin.cpp  CustomComboBoxPlugin.h  CustomFramePlugin.cpp  CustomFramePlugin.h  CustomLabelPlugin.cpp  CustomLabelPlugin.h  CustomProgressBarPlugin.cpp  CustomProgressBarPlugin.h  CustomToolBarPlugin.cpp  CustomToolBarPlugin.h  CustomToolButtonPlugin.cpp  CustomToolButtonPlugin.h  CustomToolTipsPlugin.cpp  CustomToolTipsPlugin.h  CustomWidgetCollection.cpp  CustomWidgetCollection.h  CustomWidgetPlugin.cpp  CustomWidgetPlugin.h  DesignerPluginExport.h  DraggableListWidgetPlugin.cpp  DraggableListWidgetPlugin.h  FilePathIconListWidgetItemPlugin.cpp  FilePathIconListWidgetItemPlugin.h  FilePathIconListWidgetPlugin.cpp  FilePathIconListWidgetPlugin.h  FilePickerPlugin.cpp  FilePickerPlugin.h  ImagePreviewBoxPlugin.cpp  ImagePreviewBoxPlugin.h  MusicProgressBarPlugin.cpp  MusicProgressBarPlugin.h  README.md  ValidatedLineEditPlugin.cpp  ValidatedLineEditPlugin.h  customwidgetplugin.json
Main/: main.cpp
MuCustomUiWidget/: CMakeLists.txt  MuCustomUiWidget.qrc  README.md  RESOURCES_USAGE.md
MuCustomUiWidget/CommonDefine/: ColorDefine.xlsx  RegexDefine.h  UIWidgetColorDefine.h  UIWidgetGlobal.h
MuCustomUiWidget/CoreWidget/: CustomComboBox.cpp  CustomComboBox.h  CustomComboBox.ui  CustomFrame.cpp  CustomFrame.h  CustomLabel.cpp  CustomLabel.h  CustomProgressBar.cpp  CustomProgressBar.h  CustomToolBar.cpp  CustomToolBar.h  CustomToolButton.cpp  CustomToolButton.h  FilePicker.cpp  FilePicker.h  ImagePreviewBox.cpp  ImagePreviewBox.h  ValidatedLineEdit.cpp  ValidatedLineEdit.h
MuCustomUiWidget/DomainWidget/: FilePathIconListWidget.cpp  FilePathIconListWidget.h  FilePathIconListWidget.ui  FilePathIconListWidgetItem.cpp  FilePathIconListWidgetItem.h
MuCustomUiWidget/Resources/: CommonStyles.qss  CustomButton.qss  CustomLabel.qss  CustomProgressBar.qss  CustomToolBar.qss  FilePicker.qss
MuCustomUiWidget/UtilsWidget/: CustomToolTips.cpp  CustomToolTips.h  CustomToolTips.ui
MyCustomUiWidget/: CMakeLists.txt
MyCustomUiWidget/CommonDefine/: ColorDefine.xlsx  RegexDefine.cpp  UIWidgetColorDefine.h  UIWidgetGlobal.h  ValidatedLineEditDefine.h
MyCustomUiWidget/CommonDefine/BaseDefine/: BaseStyleWidgetInterface.cpp  BaseStyleWidgetInterface.h
MyCustomUiWidget/CoreWidget/: CustomComboBox.cpp  CustomComboBox.h  CustomFrame.cpp  CustomFrame.h  CustomFrameLayoutManager.cpp  CustomFrameLayoutManager.h  CustomLabel.cpp  CustomLabel.h  CustomProgressBar.cpp  CustomProgressBar.h  CustomToolBar.cpp  CustomToolBar.h  CustomToolButton.cpp  CustomToolButton.h  FilePicker.h  ImagePreviewBox.h  MusicProgressBar.cpp  MusicProgressBar.h  ProgressBarPainter.cpp  ProgressBarPainter.h  ValidatedLineEdit.cpp  ValidatedLineEdit.h
MyCustomUiWidget/DomainWidget/: DraggableListWidget.cpp  DraggableListWidget.h  FilePathIconListWidget.cpp  FilePathIconListWidget.h  FilePathIconListWidget.ui  FilePathIconListWidgetItem.cpp  FilePathIconListWidgetItem.h  FilePicker.cpp  FilePicker.h
MyCustomUiWidget/Resources/: CustomComboBox.qss  CustomFrame.qss  CustomToolButton.qss  ImagePreviewBox.qss  MyCustomUiWidget.qrc  ValidatedLineEdit.qss
MyCustomUiWidget/Resources/CoreWidget/: CustomComboBox.qss  CustomFrame.qss  CustomLabel.qss  CustomProgressBar.qss  CustomToolBar.qss  CustomToolButton.qss  MusicProgressBar.qss  ValidatedLineEdit.qss
MyCustomUiWidget/Resources/Default/: skin_config.json
MyCustomUiWidget/Resources/DomainWidget/: FilePathIconListWidget.qss  FilePathIconListWidgetItem.qss  FilePicker.qss
MyCustomUiWidget/UtilsWidget/: CustomToolTips.cpp  CustomToolTips.h
StyleSystem/: CMakeLists.txt  NEW_SKIN_SYSTEM_USAGE.md  ReadMe.md  SkinInfo.cpp  SkinInfo.h  SkinManager.cpp  SkinManager.h  SkinManagerExample.cpp  SkinResource.cpp  SkinResource.h  SkinStyleLoader.h  SkinSystemUsage.cpp  SkinSystemUsage.h  SkinVersionInfo.cpp  StyleSystemGlobal.h  StyleSystemTest.cpp  UsageExample.cpp
StyleSystem/Resource/: dark_skin.qrc  default_skin.qrc
StyleSystem/Resource/skins/dark/: main.qss
StyleSystem/Resource/skins/default/: main.qss
StyleSystem/StyleSystem/: SkinManager.cpp  SkinManager.h  SkinResource.cpp  SkinResource.h  SkinStyleLoader.cpp  SkinVersionInfo.h  StyleSystemGlobal.h
TestWidget/: BuildVSProject_Debug.bat  BuildVSProject_Release.bat  CMakeLists.txt  TestWidget.cpp  TestWidget.h  TestWidget.ui  main.cpp
TestWidget/TestSources/: TestWidget.cpp  TestWidget.h  TestWidget.ui  main.cpp
TestWidget/TestWidget/: TestWidget.cpp  TestWidget.ui  main.cpp
UIModule/CoreWidget/: CustomLabel.cpp  CustomLabel.h  CustomLabel.ui  Readme.md
UIModule/DomainWidget/: FilePathIconListWidget.h  FilePathIconListWidgetItem.cpp  FilePathIconListWidgetItem.h  FilePathIconListWidgetItem.ui
UIModule/UtilsWidget/: CustomToolTips.cpp  CustomToolTips.h  CustomToolTips.ui
